# textr-org

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: document.rs  lib.rs  structure.rs  timestamp.rs  view.rs
crates/tui/: Cargo.toml
crates/tui/src/: action.rs  app.rs  buffer.rs  main.rs  terminal.rs  ui.rs  viewport.rs
docs/: architecture.md  guide.md  install.md  milestone-2-tui.md  roadmap.md  tutorial.md  usage.md
docs/superpowers/plans/: 2026-07-12-structural-editing.md
man/: torg.1
packaging/homebrew/: torg.rb.tmpl
